# LabelScribe

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-12-labeler-implementation.md  2026-04-12-pdf-output.md
docs/superpowers/specs/: 2026-04-12-labeler-design.md
src/labeler/: __main__.py  layout.py  printer.py  renderer.py
tests/: test_layout.py  test_main.py  test_printer.py  test_renderer.py
