[project]
name = "labelscribe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
labelscribe = "labeler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labeler"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
